@@ -1,0 +1,7 @@
+Qubit Cartan Decomposition
+==========================
+
+.. automodule:: qitensor.experimental.cartan_decompose
+   :members:
+   :undoc-members:
+   :show-inheritance:
